--- a/src/assets/Components/conponents.css
+++ b/src/assets/Components/conponents.css
@@ -1,8 +1,9 @@
 .head_head{
   height: auto;
-  width: 100%;
+  width: 98%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.9);
 }
